# lakeops

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: common.yml  docs.yml  publish.yml  release.yml  test.yml
apis/ops.execute/: index.html
apis/ops.read/: index.html
apis/ops.write/: index.html
apis/secrets.read/: index.html
apis/secrets.write/: index.html
docs/: index.md
docs/apis/: ops.execute.md  ops.read.md  ops.write.md  secrets.read.md  secrets.write.md
docs/guide/: basic-usage.md  engines.md  working_with_cli.md  working_with_delta_lake.md  working_with_google_sheets.md  working_with_iceberg.md  working_with_secrets.md
guide/engines/: index.html
guide/working_with_cli/: index.html
guide/working_with_delta_lake/: index.html
guide/working_with_google_sheets/: index.html
guide/working_with_iceberg/: index.html
guide/working_with_secrets/: index.html
integration_tests/: test_databricks_spark_connect.py  test_gsheet_integration.py.example  test_trino_integration.py.example
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: setup_databricks.sh
search/: search_index.json
src/lakeops/: __init__.py  cli.py
src/lakeops/core/: engine.py  ops.py
src/lakeops/core/engines/: __init__.py  base.py  databricks_spark_connect.py  duckdb.py  gsheet.py  polars.py  spark.py  spark_connect.py  trino.py
src/lakeops/core/secrets/: __init__.py  databricks.py  interface.py  sqlite.py  utils.py  vault.py
src/lakeops/udf/: __init__.py
src/lakeops/udf/rust/src/: lib.rs
src/lakeops/udf/rust/src/geo/: functions.rs
src/lakeops/udf/rust/src/json/: functions.rs
tests/: conftest.py  test_cli.py  test_core.py  test_databricks_secrets.py  test_duckdb.py  test_engines_base.py  test_gsheet.py  test_polars.py  test_polars_engine.py  test_secrets.py  test_secrets_utils.py  test_spark.py  test_spark_connect.py  test_spark_udf.py  test_trino.py  test_udf.py  test_vault_secrets.py
