[project]
name = "lakeops"
version = "0.1.3"
description = "Data lake operations toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deltalake>=0.24.0",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
]

[project.optional-dependencies]
spark = [
    "pyspark~=3.5.0",
]

trino = [
    "connectorx>=0.4.1",
    "trino[sqlalchemy]>=0.333.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.9.4",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

