[project]
name = "lakeops"
version = "0.2.0"
description = "Data lake operations toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Huong Vuong", email = "hoaihuongvuonghuynh@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

dependencies = [
    "cryptography>=44.0.1",
    "databricks-sdk>=0.44.1",
    "deltalake>=0.24.0",
    "duckdb>=1.2.1",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5.3,<4.0.0",
]

spark_connect = [
    "pyspark[connect]>=3.5.3,<4.0.0",
]

trino = [
    "connectorx>=0.4.1",
    "trino[sqlalchemy]>=0.333.0",
]

gsheet = [
    "gspread>=6.1.4",
]

vault = [
    "hvac>=2.3.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0", "hatchling"]
build-backend = "maturin"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "spark: tests that require Apache Spark",
    "spark_connect: tests that require Spark Connect",
    "vault: tests that require Hashicorp Vault",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "python-semantic-release>=9.12.0",
]
lint = [
    "ruff>=0.9.4",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "lakeops._lakeops_udf"
python-source = "src"
manifest-path = "rust/Cargo.toml"

[tool.semantic_release]
version_variables = ["src/lakeops/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "uv tool run maturin build"

