[package]
name = "lakeops_udf"
version = "0.1.0"
edition = "2021"

[lib]
name = "lakeops_udf"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
geo = "0.26.0"
geojson = "0.24.0"
geohash = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonpath_lib = "0.3.0"
